--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -57,6 +57,9 @@ http {
 
         charset utf-8;
 
+        # Don't include port when redirecting
+        port_in_redirect off;
+
         # far-future expires headers
         location ~* ^.+\.(css|js|jpg|jpeg|gif|png|ico|gz|svg|svgz|ttf|otf|woff|eot|mp4|ogg|ogv|webm)$ {
             expires 365d;
